Download clips via Selenium when URL can't be retrieved from thumbnail

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,45 @@
-cachetools==5.2.0
-certifi==2023.7.22
-charset-normalizer==2.1.1
-decorator==4.4.2
-google-api-core==2.10.2
-google-api-python-client==2.65.0
-google-auth==2.13.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.7.0
-googleapis-common-protos==1.56.4
-httplib2==0.20.4
-idna==3.4
-imageio==2.22.2
-imageio-ffmpeg==0.4.7
+attrs==24.2.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+decorator==5.1.1
+exceptiongroup==1.2.2
+google-api-core==2.20.0
+google-api-python-client==2.146.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.65.0
+h11==0.14.0
+httplib2==0.22.0
+idna==3.10
+imageio==2.35.1
+imageio-ffmpeg==0.5.1
 moviepy==1.0.3
-numpy==1.23.4
+numpy==2.1.1
 oauthlib==3.2.2
-Pillow==10.2.0
+outcome==1.3.0.post0
+pillow==10.4.0
 proglog==0.1.10
-protobuf==4.21.9
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==3.0.9
-python-dotenv==0.21.0
-requests==2.31.0
-requests-oauthlib==1.3.1
+proto-plus==1.24.0
+protobuf==5.28.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyparsing==3.1.4
+PySocks==1.7.1
+python-dotenv==1.0.1
+requests==2.32.3
+requests-oauthlib==2.0.0
 rsa==4.9
+selenium==4.25.0
 six==1.16.0
-tqdm==4.64.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+tqdm==4.66.5
+trio==0.26.2
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 uritemplate==4.1.1
-urllib3==1.26.18
+urllib3==2.2.3
+websocket-client==1.8.0
+wsproto==1.2.0
